--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="device_info_fragment_title">DeviceInfo</string>
     <string name="accessibility_service_label">获取当前Activity</string>
     <string name="accessibility_service_description">该服务可以获取当前的Activity，并以悬浮窗的形式显示出来。</string>
+    <string name="asnull">Null</string>
 
 </resources>
