--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,8 @@
     <string name="get_top_activity">当前Activity</string>
     <string name="debug_mode">调试模式</string>
     <string name="wifi_debug_mode">WIFI调试</string>
+    <string name="title_app">app</string>
+    <string name="title_device">devices</string>
+    <string name="title_others">others</string>
 
 </resources>
